# tauriv2-vue-desktop-starter

./: .gitattributes  .gitignore  LICENSE.md  README.md  bun.lockb  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: publish-to-auto-release.yml  test-build-only.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: logging.rs
src/assets/css/: base.css  main.css  tailwind.css
src/components/: AppSidebar.vue  AppTopbar.vue  ThemeSwitch.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuRadioItem.vue  DropdownMenuSeparator.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue
src/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectLabel.vue
src/components/ui/separator/: Separator.vue
src/components/ui/tooltip/: TooltipContent.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  zh.json
src/lib/: config.ts  schema.ts
src/pages/: home.vue  settings.vue
src/router/: index.ts
src/stores/: settings.ts
