[package]
name = "tauriv2-vue-desktop-starter"
version = "0.2.0"
description = "A Tauri v2 Vue Desktop Starter"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauriv2_vue_desktop_starter_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.10", features = [ "macos-private-api" ] }
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-window-state = "2.0.0-rc.3"
serde_json = "1.0.128"
tauri-plugin-store = "2.0.0-rc.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
