[package]
name = "tauriv2-vue-desktop-starter"
version = "0.9.0"
description = "A Tauri v2 Vue Desktop Starter"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriv2_vue_desktop_starter_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
tauri-plugin-store = "2.2.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-log = "2.4.0"

serde_json = "1.0.140"
log = "0.4.27"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# https://tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
